Fix corrupted PDF generation GitHub Action workflow

--- a/.github/workflows/generate-pdfs.yml
+++ b/.github/workflows/generate-pdfs.yml
@@ -10,23 +10,8 @@ on:
   pull_request:
     branches: [ main ]
     paths: 
-      - 'lectures/**/        # List all PDF files
-        for file in pdfs/*.pdf; do
-          if [ -f "$file" ]; then
-            filename=$(basename "$file" .pdf)
-            # Convert lecture1-course-introduction to "Lecture 1: Course Introduction"
-            if [[ $filename =~ lecture([0-9]+)-(.+) ]]; then
-              number="${BASH_REMATCH[1]}"
-              title="${BASH_REMATCH[2]}"
-              # Convert hyphen-separated title to title case
-              title=$(echo "$title" | sed 's/-/ /g' | sed 's/\b./\u&/g')
-              display_name="Lecture ${number}: ${title}"
-            else
-              display_name="$filename"
-            fi
-            echo "- [${display_name}](./${filename}.pdf) - ${filename} slides" >> pdfs/README.md
-          fi
-        done     - 'theme/**/*.css'
+      - 'lectures/**/*.html'
+      - 'theme/**/*.css'
       - 'dist/**'
   workflow_dispatch: # Allow manual triggering
 
@@ -229,13 +214,21 @@ jobs:
         echo "## Available Lectures:" >> pdfs/README.md
         echo "" >> pdfs/README.md
         
-        # List all PDF files
+        # List all PDF files with new naming convention
         for file in pdfs/*.pdf; do
           if [ -f "$file" ]; then
             filename=$(basename "$file" .pdf)
-            # Convert lecture-01 to "Lecture 01"
-            display_name=$(echo "$filename" | sed 's/lecture-/Lecture /' | sed 's/^./\U&/')
-            echo "- [${display_name}](./${filename}.pdf) - ${filename^} slides" >> pdfs/README.md
+            # Convert lecture1-course-introduction to "Lecture 1: Course Introduction"
+            if [[ $filename =~ lecture([0-9]+)-(.+) ]]; then
+              number="${BASH_REMATCH[1]}"
+              title="${BASH_REMATCH[2]}"
+              # Convert hyphen-separated title to title case
+              title=$(echo "$title" | sed 's/-/ /g' | sed 's/\b./\u&/g')
+              display_name="Lecture ${number}: ${title}"
+            else
+              display_name="$filename"
+            fi
+            echo "- [${display_name}](./${filename}.pdf) - ${filename} slides" >> pdfs/README.md
           fi
         done
         
