Update lecture title and add welcome slide content in course introduction

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,8 @@
         "mathematic.vscode-pdf",
         "ms-vscode.live-server",
         "ms-vscode.vscode-copilot-vision",
-        "ms-vscode.vscode-websearchforcopilot"
+        "ms-vscode.vscode-websearchforcopilot",
+        "ritwickdey.LiveServer"
       ],
       
       // VS Code settings
