Test commit to verify Git configuration is working

--- a/.github/workflows/generate-videos-simple.yml
+++ b/.github/workflows/generate-videos-simple.yml
@@ -150,8 +150,8 @@ jobs:
                 
                 And so on for each slide."""
                 
-                    # Retry logic with fallback model (quota friendly first)
-                    models = ["gemini-1.5-flash", "gemini-2.5-pro"]  # try lighter model first
+                    # Retry logic with optimized model fallback order
+                    models = ["gemini-2.5-pro", "gemini-2.5-flash", "gemini-1.5-flash", "gemini-1.5-flash-latest"]
                     last_error = None
                     for model_name in models:
                         print(f"Attempting Gemini generation with model: {model_name}")
