--- a/.github/workflows/generate-videos-simple.yml
+++ b/.github/workflows/generate-videos-simple.yml
@@ -24,6 +24,16 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0  # Get full history for change detection
+        
+    - name: Check voice sample
+      run: |
+        if [ -f "my-voice-sample.wav" ]; then
+          echo "✅ Voice sample file found"
+        else
+          echo "⚠️  Voice sample file 'my-voice-sample.wav' not found - videos will use default voice"
+        fi
       
     - name: Setup Python
       uses: actions/setup-python@v4
@@ -57,11 +67,14 @@ jobs:
                 self.temp_dir = Path("temp_video_generation")
                 self.cache_file = Path("video_generation_cache.json")
                 self.scripts_dir = Path("scripts")
+                self.voice_sample = Path("my-voice-sample.wav")
+                self.cloned_voice_id = None
                 
                 self.videos_dir.mkdir(exist_ok=True)
                 self.temp_dir.mkdir(exist_ok=True)
                 self.scripts_dir.mkdir(exist_ok=True)
                 self.cache = self.load_cache()
+                self.setup_voice_cloning()
                 
             def setup_apis(self):
                 if not os.getenv('GOOGLE_AI_STUDIO_API_KEY'):
@@ -74,6 +87,29 @@ jobs:
                 self.minimax_api_key = os.getenv('MINIMAX_API_KEY')
                 self.minimax_group_id = os.getenv('MINIMAX_GROUP_ID')
                 print("APIs configured")
+                
+            def setup_voice_cloning(self):
+                """Setup voice cloning using the user's voice sample"""
+                if not self.voice_sample.exists():
+                    print("⚠️  Voice sample file 'my-voice-sample.wav' not found, using default voice")
+                    return
+
+                print("🎤 Setting up voice cloning...")
+                try:
+                    # Read the voice sample file
+                    with open(self.voice_sample, 'rb') as f:
+                        audio_data = f.read()
+
+                    # Convert to base64 for potential use in TTS request
+                    import base64
+                    self.voice_sample_base64 = base64.b64encode(audio_data).decode('utf-8')
+                    print(f"   ✅ Voice sample loaded ({len(audio_data)} bytes)")
+
+                    # Use user_voice as the cloned voice ID
+                    self.cloned_voice_id = "user_voice"
+                    print(f"✅ Voice clone ready: {self.cloned_voice_id}")
+                except Exception as e:
+                    print(f"⚠️  Voice cloning setup failed: {e}, using default voice")
                 
             def load_cache(self):
                 if self.cache_file.exists():
@@ -283,7 +319,8 @@ jobs:
                 
             def generate_audio_with_minimax(self, text, slide_num, lecture_name):
                 """Generate audio using MiniMax TTS API"""
-                print(f"Generating audio for slide {slide_num}")
+                voice_type = "cloned voice" if self.cloned_voice_id else "default voice"
+                print(f"🎵 Generating audio for slide {slide_num} using {voice_type}")
                 
                 base_url = "https://api.minimax.io/v1/t2a_v2"
                 
@@ -300,14 +337,14 @@ jobs:
                 }
                 
                 payload = {
-                    "model": "speech-2.5-hd-preview",  # Updated model from working code
+                    "model": "speech-2.5-hd-preview",
                     "text": text,
                     "stream": False,
                     "voice_setting": {
-                        "voice_id": "male-qn-qingse",
+                        "voice_id": self.cloned_voice_id if self.cloned_voice_id else "male-qn-qingse",
                         "speed": 1.0,
                         "vol": 1.0,
-                        "pitch": 0  # Added pitch parameter
+                        "pitch": 0
                     },
                     "audio_setting": {
                         "sample_rate": 32000,
@@ -608,8 +645,10 @@ jobs:
         
     - name: Commit generated content
       run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
+        # Configure Git for commits
+        git config user.name "Daniel Cregg"
+        git config user.email "danielcregg@users.noreply.github.com"
+        git config commit.gpgsign false
         
         if [ -d "videos" ]; then
           git add videos/
