--- a/.github/workflows/generate-videos-simple.yml
+++ b/.github/workflows/generate-videos-simple.yml
@@ -89,27 +89,21 @@ jobs:
                 print("APIs configured")
                 
             def setup_voice_cloning(self):
-                """Setup voice cloning using the user's voice sample"""
-                if not self.voice_sample.exists():
-                    print("⚠️  Voice sample file 'my-voice-sample.wav' not found, using default voice")
-                    return
-
+                """Setup voice cloning using the user's existing cloned voice"""
                 print("🎤 Setting up voice cloning...")
-                try:
-                    # Read the voice sample file
-                    with open(self.voice_sample, 'rb') as f:
-                        audio_data = f.read()
-
-                    # Convert to base64 for potential use in TTS request
-                    import base64
-                    self.voice_sample_base64 = base64.b64encode(audio_data).decode('utf-8')
-                    print(f"   ✅ Voice sample loaded ({len(audio_data)} bytes)")
-
-                    # Use user_voice as the cloned voice ID
-                    self.cloned_voice_id = "user_voice"
-                    print(f"✅ Voice clone ready: {self.cloned_voice_id}")
-                except Exception as e:
-                    print(f"⚠️  Voice cloning setup failed: {e}, using default voice")
+                
+                # Use the user's existing cloned voice ID from MiniMax
+                self.cloned_voice_id = "MyClonedVoice1"
+                print(f"✅ Using existing cloned voice: {self.cloned_voice_id}")
+                print("📄 File ID: 311103389282466")
+                
+                # Check if voice sample exists for reference
+                if self.voice_sample.exists():
+                    print(f"📁 Voice sample file found: {self.voice_sample}")
+                else:
+                    print("⚠️  Voice sample file not found, but using existing clone")
+                
+                return True
                 
             def load_cache(self):
                 if self.cache_file.exists():
