Add MiniMax voice cloning functionality and test suite
- Implemented the main voice cloning script (minimax_voice_clone_corrupted.py) with features for file upload, voice cloning, and speech generation.
- Created a setup script (setup_voice_cloning.sh) to configure the environment and check for necessary dependencies and audio samples.
- Developed a test runner (test_voice_cloning_complete.py) to validate the voice cloning workflow, including environment checks, basic TTS, file uploads, and speech generation with cloned voices.
- Added sample audio file (my-voice-sample.wav) for testing purposes.
- Included multiple test audio files for generated voices (voice_test_DanielTestVoice123.mp3, voice_test_danielVoice15092025.mp3).
- Created a placeholder for an additional voice cloning script (voice_clone_minimax.py).

--- a/.github/workflows/generate-videos-simple.yml
+++ b/.github/workflows/generate-videos-simple.yml
@@ -89,13 +89,12 @@ jobs:
                 print("APIs configured")
                 
             def setup_voice_cloning(self):
-                """Setup voice cloning using the user's existing cloned voice"""
+                """Setup voice cloning using the user's cloned voice"""
                 print("🎤 Setting up voice cloning...")
                 
-                # Use the user's existing cloned voice ID from MiniMax
-                self.cloned_voice_id = "MyClonedVoice1"
-                print(f"✅ Using existing cloned voice: {self.cloned_voice_id}")
-                print("📄 File ID: 311103389282466")
+                # Use the user's current cloned voice ID
+                self.cloned_voice_id = "danielVoice15092025"
+                print(f"✅ Using cloned voice: {self.cloned_voice_id}")
                 
                 # Check if voice sample exists for reference
                 if self.voice_sample.exists():
