Refine file path patterns for HTML lectures in PDF generation workflow

--- a/.github/workflows/generate-pdfs.yml
+++ b/.github/workflows/generate-pdfs.yml
@@ -4,13 +4,13 @@ on:
   push:
     branches: [ main ]
     paths: 
-      - 'lectures/**/*.html'
+      - 'lectures/*.html'
       - 'theme/**/*.css'
       - 'dist/**'
   pull_request:
     branches: [ main ]
     paths: 
-      - 'lectures/**/*.html'
+      - 'lectures/*.html'
       - 'theme/**/*.css'
       - 'dist/**'
   workflow_dispatch: # Allow manual triggering
