Enhance PDF generation process by adding Mermaid diagram rendering support and improving styles for better compatibility; update HTML titles and sections for clarity

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,7 +18,8 @@
         "ms-vscode.live-server",
         "ms-vscode.vscode-copilot-vision",
         "ms-vscode.vscode-websearchforcopilot",
-        "ritwickdey.LiveServer"
+        "ritwickdey.LiveServer",
+        "GitHub.copilot-chat"
       ],
       
       // VS Code settings
