--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "aiap-lecture-slides",
+  "name": "ooc-lecture-slides",
   "version": "1.0.0",
-  "description": "A comprehensive collection of interactive lecture slides for the AI-Assisted Programming course, built with Reveal.js and hosted on GitHub Pages.",
-  "main": "index.js",
+  "description": "Interactive lecture slides for the Object Oriented Computing module, built with Reveal.js and hosted on GitHub Pages.",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "update-front-page": "python3 update_front_page.py"
   },
   "keywords": [],
   "author": "",
